--- a/src/components/CameraKit/CameraKit.css
+++ b/src/components/CameraKit/CameraKit.css
@@ -16,7 +16,7 @@
   margin-top: 20px;
 
   .styled-select {
-    display: none;
+    /* display: none; */
     padding: 10px;
     font-size: 16px;
     border: none;
