--- a/src/components/CameraKit/CameraKit.css
+++ b/src/components/CameraKit/CameraKit.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-.container {
+.containerBox {
   display: flex;
   justify-content: center;
   align-items: center;
